force-app/main/default/objects/Meeting__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be automatically populated for reporting purposes if the Context Id field is an Account.</description>
    <inlineHelpText>This field will be automatically populated for reporting purposes if the Context Id field is an Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>