force-app/main/default/objects/Meeting__c/fields/Context_Id__c.field-meta.xml
<CustomField>
    <fullName>Context_Id__c</fullName>
    <description>A Salesforce Id of any Salesforce record to tie this meeting to.</description>
    <externalId>true</externalId>
    <inlineHelpText>A Salesforce Id of any Salesforce record to tie this meeting to.</inlineHelpText>
    <label>Context Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>