force-app/main/default/objects/Meeting__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <description>The time the JamCloud meeting ended.</description>
    <inlineHelpText>The time the JamCloud meeting ended.</inlineHelpText>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>