force-app/main/default/objects/Meeting__c/fields/External_Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Meeting_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The JamCloud Meeting Id that this record represents.</description>
    <externalId>true</externalId>
    <inlineHelpText>The JamCloud Meeting Id that this record represents.</inlineHelpText>
    <label>External Meeting Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>