force-app/main/default/objects/Meeting__c/fields/Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL__c</fullName>
    <description>The URL of the JamCloud meeting.</description>
    <inlineHelpText>The URL of the JamCloud meeting.</inlineHelpText>
    <label>Meeting URL</label>
    <type>Url</type>
</CustomField>