force-app/main/default/objects/Meeting__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field will be automatically populated for reporting purposes if the Context Id field is an Opportunity.</description>
    <inlineHelpText>This field will be automatically populated for reporting purposes if the Context Id field is an Opportunity.</inlineHelpText>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>