force-app/main/default/objects/Meeting__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <description>The time the JamCloud meeting started.</description>
    <inlineHelpText>The time the JamCloud meeting started.</inlineHelpText>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>